<resources>
    <string name="app_name">Go Twitter</string>
    <string name="by_author">By Paulo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_twitter">TwitterActivity</string>
    <string name="btn_twitter">Twittar</string>
    <string name="hint_edit_twitter">Qual a novidade...</string>
    <string name="title_about">Sobre este App</string>
    <string name="text_about_app">Este APP foi criado como um teste para a empresa NEXFAR uma empresa bacana que vai me contrara após ver este maravilhoso app, que fiz com muito carinho e usando os conhecimentos adquiridos em cursos, livros e amigos imáginario.  Sinta -se a vontade para o uso deste código fonte e em caso de dúvidas entre em contato eplo e-mail: paulosoujava@gmail ou via Whatsapp ( 48 ) 996297813</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="perfil">Perfil</string>
    <string name="about">Sobre</string>
    <string name="voltar">voltar</string>
    <string name="versao">GoTwitter vs.: 1.0</string>
    <string name="url_site">Web site:</string>
    <string name="name">Nome:</string>
    <string name="name_profile">Nick name</string>
    <string name="website">Meu site</string>
    <string name="description">Descrição</string>
    <string name="tweets">Tweets</string>
    <string name="follow">Seguindo</string>
    <string name="followme">Seguidores</string>
    <string name="check_internet">VocÊ está navegando em modo OFFLINE, sem coexão com a internet.</string>
    <string name="ops_error_url">Error loading tweets</string>
    <string name="ops_error_data_intent">Opss algo saiu errado, por favor tente mais tarde</string>
    <string name="ok_msg">Obaaa, enviado...</string>
    <string name="btn_home">Home</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="sqlite_perfil">SQLite Perfil</string>
    <string name="timelie">SQLite Timeline</string>


    <!--TOKENS-->

    <string name="SCREEN_NAME">COLOQUE_SUA_CHAVE</string>
    <string name="CONSUMER_KEY">COLOQUE_SUA_CHAVE</string>
    <string name="CONSUMER_SECRET">COLOQUE_SUA_CHAVE</string>
    <string name="ACCESS_TOKEN_CREDENTIAL">COLOQUE_SUA_CHAVE</string>
    <string name="ACCESS_TOKEN">COLOQUE_SUA_CHAVE</string>
    <string name="CONSUMER_SECRET_TOKEN">COLOQUE_SUA_CHAVE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="my_timeline">Timeline</string>
    <string name="first_connection">Esta é a sua primeira execução do aplicativo, para isto você deve estar conectado a internet</string>
    <string name="access_not">Ops , Acesso Negado.</string>
    <string name="key_invalid">Ops, OAuth Consumer key/secret inválido.</string>
    <string name="our_fail">Falha ao obter a timeline:</string>
    <string name="send_ok">Obaaaa, Tweet publicado!</string>


</resources>
