<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_timeline"
        android:icon="@drawable/ic_list"
        android:title="@string/my_timeline" >
    </item>

    <item
        android:id="@+id/navigation_twittar"
        android:icon="@drawable/ic_twitter"
        android:title="@string/btn_twitter" />


    <item
        android:id="@+id/navigation_info"
        android:icon="@android:drawable/ic_dialog_info"
         android:title="@string/about" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/perfil" />

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

        <item
            android:id="@+id/navigation_timeline_sqlite"
            android:icon="@drawable/ic_list"
            android:title="@string/timelie" >
        </item>
    </group>
</menu>