<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_light"
    android:fitsSystemWindows="true"
    tools:context=".activity.ProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue_light"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/blue_light"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/profile_banner_url"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/twitter_splash_img"
                    app:layout_collapseMode="parallax" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image_url"
                    android:layout_width="@dimen/size_photo_profile"
                    android:layout_height="@dimen/size_photo_profile"
                    android:layout_gravity="center"
                    android:layout_marginBottom="25dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/no_photo"
                    app:civ_border_color="@color/blue_light"
                    app:civ_border_width="@dimen/weitgh_border_timeline" />

            </FrameLayout>


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--CONTAINER COUNTERS -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <!-- COUNTERS -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/blue_light"
                    android:orientation="horizontal">

                    <!--TWEETS -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/followers_count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="-25dp"
                            android:gravity="center"
                            android:lineSpacingExtra="8dp"
                            android:padding="@dimen/activity_horizontal_margin"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold|italic"
                            tools:text="21.090" />

                        <TextView
                            android:id="@+id/twitter"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:lineSpacingExtra="8dp"
                            android:padding="@dimen/activity_horizontal_margin"
                            android:text="@string/tweets"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <!--FOLLOW -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/friends_count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="-25dp"
                            android:gravity="center"
                            android:lineSpacingExtra="8dp"
                            android:padding="@dimen/activity_horizontal_margin"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold|italic"
                            tools:text="21.090" />

                        <TextView
                            android:id="@+id/follow"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:lineSpacingExtra="8dp"
                            android:padding="@dimen/activity_horizontal_margin"
                            android:text="@string/follow"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <!--FOLLOW ME -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/statuses_count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="-25dp"
                            android:gravity="center"
                            android:lineSpacingExtra="8dp"
                            android:padding="@dimen/activity_horizontal_margin"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold|italic"
                            tools:text="21.090" />

                        <TextView
                            android:id="@+id/follow_me"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:lineSpacingExtra="8dp"
                            android:padding="@dimen/activity_horizontal_margin"
                            android:text="@string/followme"
                            android:textColor="@color/white" />

                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--CONTAINER DATA PROFILE -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/blue_light"
                android:elevation="8dp"
                app:cardCornerRadius="4dp">

                <!--  DATA PROFILE -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/blue_light"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/white"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        tools:text="Paulo oliveira" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Nickname"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/screen_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        tools:text="\@paulo_oliveira" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textColor="@color/white"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        tools:text="Minha descrição" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Cidade Pais"
                        android:textColor="@color/white"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:layout_marginLeft="10dp"
                        tools:text="Florianópolis Brasil" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--SITE -->
            <android.support.v7.widget.CardView
                android:id="@+id/has_site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:elevation="8dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <Button
                        android:id="@+id/site"
                        style="@style/Base.Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/btn_selector"
                        android:onClick="action"
                        android:text="@string/website"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_txt_btn_sent_twitter" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--BACK BUTTOM -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:elevation="8dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/back"
                        style="@style/Base.Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/btn_selector"
                        android:onClick="action"
                        android:text="@string/voltar"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_txt_btn_sent_twitter" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--VERSION TARGET -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/twitter_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/versao"
                    android:textColor="@color/white"
                    android:textSize="10sp" />


            </FrameLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>


